--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     Home</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/me.html" class="navbar__links">
+                    <a href="me.html" class="navbar__links">
                     Me</a>
                 </li>
                 <li class="navbar__item">
