--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo">
+            <a href="index.html" id="navbar__logo">
                 <i class="fab fa-autoprefixer"></i>Ashu Chauhan</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
@@ -51,7 +51,7 @@
                 <button class="main__btn"><a href="me.html">Get Started</a></button>
             </div>
             <div class="main__img--container">
-                <img src="images/pic1.svg" alt="pic" id="main__img">
+                <img src="https://raw.githubusercontent.com/ashuchauhan2/website/d7052c84021afb795d2c6c4efc7666694a66c8d7/images/pic1.svg" alt="pic" id="main__img">
             </div>
         </div>
     </div>
