--- a/picToText.html
+++ b/picToText.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo">
+            <a href="index.html" id="navbar__logo">
                 <i class="fab fa-autoprefixer"></i>Ashu Chauhan</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
@@ -54,3 +54,6 @@
             </div>
         </div>
     </div>
+    <script src="app.js"></script>
+</body>
+</html>
