--- a/maze.html
+++ b/maze.html
@@ -50,7 +50,7 @@
                 <button class="main__btn"><a href="https://github.com/ashuchauhan2/mazesolver" target="_blank" rel="noopener noreferrer">Source Code</a></button>
             </div>
             <div class="main__img--container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/YqiBSOZGrtE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/1fbwEG3qEeI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </div>
