--- a/me.html
+++ b/me.html
@@ -47,11 +47,11 @@
             <div class="main__content">
                 <h1>About Me</h1>
                 <P>My name is Ashu Chauhan. <br> I am enrolled in the Computer Science program at Brock University.<br><br>
-                Please do not hesitate to contact me with the button on the top right <br> or via phone with the button below.</P>
-                <button class="main__btn"><a href="tel:9053584278">Call me</a></button>
+                Please do not hesitate to contact me with the button on the top right to email me or via text with the button below.</P>
+                <button class="main__btn"><a href="sms:9053584278">Text me</a></button>
             </div>
             <div class="main__img--container">
-                <img src="pic3.jpg">
+                <img src="https://raw.githubusercontent.com/ashuchauhan2/website/d7052c84021afb795d2c6c4efc7666694a66c8d7/images/pic1.svg" alt="pic" id="main__img">
             </div>
         </div>
     </div>
