--- a/picToText.html
+++ b/picToText.html
@@ -46,11 +46,11 @@
         <div class="main__container">
             <div class="main__content">
                 <h1>Image to Text Converter</h1>
-                <P>Simple tool where users can input a file, and then raw text from that file will be returned to them.</P>
+                <P>Simple tool that automates the process of converting images to raw text.</P>
                 <button class="main__btn"><a href="/" target="_blank" rel="noopener noreferrer">Source Code</a></button>
             </div>
             <div class="main__img--container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/YqiBSOZGrtE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/CSoQYXdu0hI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </div>
