--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h1>ASHUS WEBSITE</h1>
                 <h2>HELLO</h2>
                 <P>Welcome to my site!</P>
-                <button class="main__btn"><a href="me.html">Get Started</a></button>
+                <button class="main__btn"><a href="https://github.com/ashuchauhan2">GitHub Page</a></button>
             </div>
             <div class="main__img--container">
                 <img src="https://raw.githubusercontent.com/ashuchauhan2/website/d7052c84021afb795d2c6c4efc7666694a66c8d7/images/pic1.svg" alt="pic" id="main__img">
